[package]
name = "axum-startup"
version = "0.1.0"
edition = "2021"
author = "yexiyue"
description = "A simple startup framework for axum"
repository = "https://github.com/yexiyue/axum-startup"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
console = "0.15.7"
dialogue-macro = "0.2.1"
indicatif = "0.17.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace]
members = []
exclude = [
    "templates/axum-prisma",
    "templates/axum-shuttle",
    "templates/shuttle-mongodb",
]
